--- a/[E-01]_iris.ipynb
+++ b/[E-01]_iris.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "66d9b55a",
+   "id": "54337c2f",
    "metadata": {},
    "source": [
     "# 평가문항\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86bdfb8b",
+   "id": "2a20e8e5",
    "metadata": {},
    "source": [
     "# 모듈 import"
@@ -27,8 +27,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "63005bb1",
+   "execution_count": 1,
+   "id": "60f80223",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f16a6c27",
+   "id": "49536536",
    "metadata": {},
    "source": [
     "# 손글씨 이미지 데이터"
@@ -55,8 +55,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "d9de72d2",
+   "execution_count": 2,
+   "id": "a6a2f6c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "23851abb",
+   "execution_count": 3,
+   "id": "7da67008",
    "metadata": {},
    "outputs": [
     {
@@ -83,8 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "96a6cf5a",
+   "execution_count": 4,
+   "id": "95befc56",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "dict_keys(['data', 'target', 'frame', 'feature_names', 'target_names', 'images', 'DESCR'])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,8 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "id": "a55d3ef5",
+   "execution_count": 5,
+   "id": "9d2473bc",
    "metadata": {},
    "outputs": [
     {
@@ -125,8 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "f8c41f7b",
+   "execution_count": 6,
+   "id": "8cdd8644",
    "metadata": {},
    "outputs": [
     {
@@ -149,8 +149,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "155ca69e",
+   "execution_count": 7,
+   "id": "8bb63239",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b24f519",
+   "id": "81abafa8",
    "metadata": {},
    "source": [
     "## Decision Tree"
@@ -182,8 +182,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "b79a7057",
+   "execution_count": 8,
+   "id": "d72491a9",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "DecisionTreeClassifier(random_state=32)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,24 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "fc4938e8",
+   "execution_count": 9,
+   "id": "1ae6e60e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5 2 5 4 1 2 4 3 3 0 8 7 0 1 8 6 9 7 9 7 1 3 6 7 8 8 5 3 5 9 3 3 7 3 4 1 9\n",
-      " 2 5 4 2 1 0 9 2 3 6 1 9 8 4 3 8 4 9 5 9 7 8 0 4 3 1 4 7 9 0 7 1 3 9 3 3 8\n",
-      " 0 7 3 6 5 2 0 8 8 0 1 1 2 8 8 8 3 6 3 4 7 9 8 2 9 2 5 9 8 0 6 8 3 0 6 7 7\n",
-      " 3 9 1 5 4 6 0 8 8 1 2 7 2 9 5 2 3 4 4 7 6 2 5 4 9 3 7 6 7 2 7 4 5 3 1 9 7\n",
-      " 4 1 8 1 4 0 5 9 1 2 3 5 0 3 4 1 5 4 9 3 5 6 4 0 9 6 7 0 9 9 4 7 3 5 2 0 6\n",
-      " 7 5 3 9 7 1 3 1 4 3 3 1 4 1 1 1 7 1 6 4 6 9 5 1 3 5 2 9 8 8 8 2 9 1 5 2 2\n",
-      " 3 9 0 2 0 2 1 0 5 0 6 4 2 1 9 0 9 0 6 9 4 4 9 6 5 6 1 1 7 0 8 6 2 0 1 2 3\n",
-      " 8 4 4 3 5 7 3 7 2 0 2 0 9 2 8 6 3 3 0 6 6 6 7 1 6 1 7 6 0 6 3 7 5 6 2 2 9\n",
-      " 8 4 7 3 3 0 0 3 3 9 7 4 4 7 9 7 4 0 5 6 1 8 1 0 5 2 6 4 7 8 5 8 6 6 6 5 0\n",
-      " 2 9 8 7 9 6 7 0 8 9 5 9 6 1 5 5 4 7 3 9 2 7 3 3 6 6 3]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      0.92      0.96        37\n",
@@ -252,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "48236113",
+   "id": "0087d7e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ba841ef",
+   "id": "c9cc790f",
    "metadata": {},
    "source": [
     "## Random Forest"
@@ -273,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "06d0489e",
+   "id": "6826d9ea",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "a3ec3298",
+   "id": "4410e172",
    "metadata": {
     "scrolled": true
    },
@@ -333,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b75c8b5",
+   "id": "18f3beca",
    "metadata": {},
    "source": [
     "## SVM(support vector machine)"
@@ -341,16 +331,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6643b89c",
+   "id": "9a99288c",
    "metadata": {},
    "source": [
-    "####  기본적 SVC"
+    "####  기본 SVC"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "d2daf912",
+   "id": "e8b7a1f4",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "bf500c81",
+   "id": "3023cc26",
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdbb13bb",
+   "id": "b545e8e6",
    "metadata": {},
    "source": [
     "####  Linear SVC"
@@ -417,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "57f4438c",
+   "id": "76424296",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "e06aefca",
+   "id": "7787e2f4",
    "metadata": {
     "scrolled": true
    },
@@ -483,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7b3390f",
+   "id": "d18a364d",
    "metadata": {},
    "source": [
     "## SGD Classifier"
@@ -492,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "6b26f855",
+   "id": "40ddd602",
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "af00cf80",
+   "id": "32bf49d3",
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da9869a5",
+   "id": "60e9d97f",
    "metadata": {},
    "source": [
     "## Logistic Regression"
@@ -559,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "8fa79f8d",
+   "id": "ff7f5a10",
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "183a04fe",
+   "id": "af805974",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +621,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4a8f96a",
+   "id": "efb2e689",
+   "metadata": {},
+   "source": [
+    "## accuracy\n",
+    "Decision Tree 0.86<br/>\n",
+    "Random Forest 0.97<br/>\n",
+    "기본 SVC 0.97<br/>\n",
+    "Linear SVC 0.93<br/>\n",
+    "SGD Classifier 0.94<br/>\n",
+    "Logistic Regression 0.95\n",
+    "\n",
+    "Random Forest와 기본 SVC의 정확도가 가장 높게 나왔기에 손글씨 분류에 적합해 보인다.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67725baf",
    "metadata": {},
    "source": [
     "# 와인 분류"
@@ -640,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "d331d78f",
+   "id": "ad904fe9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "147b3ea2",
+   "id": "3fb2510f",
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "bfcc32a5",
+   "id": "b79f4c8d",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "3bf2eb24",
+   "id": "8b66499b",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "c122988d",
+   "id": "987e84f7",
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "65a412be",
+   "id": "285a0eb4",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1296,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "228f0222",
+   "id": "f767ab6a",
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "afd3d0cd",
+   "id": "193008e5",
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1346,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "bb8ba74c",
+   "id": "19338ed5",
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "265b04b9",
+   "id": "42ce97aa",
    "metadata": {},
    "source": [
     "## Decision Tree"
@@ -1373,7 +1379,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "2d9d31a9",
+   "id": "2d4ba0a4",
    "metadata": {},
    "outputs": [
     {
@@ -1397,7 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "0428304a",
+   "id": "be820eeb",
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f582dc2",
+   "id": "eba6ef63",
    "metadata": {},
    "source": [
     "## Random Forest"
@@ -1433,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "39519f94",
+   "id": "b323e77f",
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1463,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "513b1f63",
+   "id": "c1d3c522",
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a373ad4",
+   "id": "75e7b3ed",
    "metadata": {},
    "source": [
     "## SVM(support vector machine)"
@@ -1492,16 +1498,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "932c6b35",
+   "id": "e5d7b441",
    "metadata": {},
    "source": [
-    "#### 기본적인 SVM"
+    "#### SVC"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "e216e99c",
+   "id": "e4b49d6b",
    "metadata": {},
    "outputs": [
     {
@@ -1525,7 +1531,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "8b06923d",
+   "id": "a7f85781",
    "metadata": {},
    "outputs": [
     {
@@ -1552,7 +1558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "958fb8fd",
+   "id": "fa257c97",
    "metadata": {},
    "source": [
     "#### Linear SVC"
@@ -1561,7 +1567,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "cc58e83a",
+   "id": "feaf81dd",
    "metadata": {},
    "outputs": [
     {
@@ -1591,7 +1597,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "b36bf4c2",
+   "id": "6dca9292",
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4f24858",
+   "id": "94369339",
    "metadata": {},
    "source": [
     "# SGD Classifier"
@@ -1627,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "3a105701",
+   "id": "b888a181",
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1657,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "9c929582",
+   "id": "5d016023",
    "metadata": {},
    "outputs": [
     {
@@ -1678,7 +1684,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c354a092",
+   "id": "92c3a46b",
    "metadata": {},
    "source": [
     "# Logistic Regression"
@@ -1687,7 +1693,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "f508d699",
+   "id": "a76e38c2",
    "metadata": {
     "scrolled": true
    },
@@ -1727,7 +1733,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "381a42b2",
+   "id": "b665ce09",
    "metadata": {},
    "outputs": [
     {
@@ -1754,7 +1760,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd94ce4b",
+   "id": "ab492354",
+   "metadata": {},
+   "source": [
+    "## accuracy\n",
+    "Decision Tree : 0.92<br/>\n",
+    "Random Forest : 0.97<br/>\n",
+    "SVC : 0.89<br/>\n",
+    "Linear SVC : 0.72<br/>\n",
+    "SGD Classifier : 0.72<br/>\n",
+    "Logistic Regression : 0.92<br/>\n",
+    "\n",
+    "Random Forest가 가장 높으며 다음으로 Decision Tree와 Logistic Regression이 와인 분류에 적합해 보인다.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d4c0be9",
    "metadata": {},
    "source": [
     "# 유방암 여부 체크"
@@ -1763,7 +1785,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "e95d1977",
+   "id": "ee6b0a3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1773,7 +1795,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "e147051d",
+   "id": "fa237c72",
    "metadata": {},
    "outputs": [
     {
@@ -1791,7 +1813,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "1f660a3c",
+   "id": "4a431b66",
    "metadata": {
     "scrolled": true
    },
@@ -1814,7 +1836,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "07d16726",
+   "id": "a02978b8",
    "metadata": {},
    "outputs": [
     {
@@ -1949,7 +1971,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "011ae962",
+   "id": "8ec3299e",
    "metadata": {},
    "outputs": [
     {
@@ -1974,7 +1996,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "26f4c115",
+   "id": "75465c26",
    "metadata": {},
    "outputs": [
     {
@@ -2004,7 +2026,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "b54cca29",
+   "id": "afd92f11",
    "metadata": {},
    "outputs": [
     {
@@ -2050,7 +2072,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "a7ca8498",
+   "id": "41d80b26",
    "metadata": {},
    "outputs": [
     {
@@ -2450,7 +2472,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "596d4eb2",
+   "id": "621aa75c",
    "metadata": {},
    "outputs": [
     {
@@ -2474,7 +2496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fbd7b9d",
+   "id": "270dc20a",
    "metadata": {},
    "source": [
     "# Decision Tree"
@@ -2483,7 +2505,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "fd24c124",
+   "id": "042cb6b7",
    "metadata": {},
    "outputs": [
     {
@@ -2507,7 +2529,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "9e325357",
+   "id": "38750f6b",
    "metadata": {},
    "outputs": [
     {
@@ -2533,7 +2555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f40d2a0",
+   "id": "32218a7f",
    "metadata": {},
    "source": [
     "## Random Forest"
@@ -2542,7 +2564,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "5bb82d1f",
+   "id": "38d88e57",
    "metadata": {},
    "outputs": [
     {
@@ -2566,7 +2588,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "47d955f4",
+   "id": "e974cae8",
    "metadata": {},
    "outputs": [
     {
@@ -2592,7 +2614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b84cd77",
+   "id": "b84aa842",
    "metadata": {},
    "source": [
     "## SVM (support vector machine)"
@@ -2600,7 +2622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20f3a134",
+   "id": "ed5f831c",
    "metadata": {},
    "source": [
     "#### 기본적인 SVM"
@@ -2609,7 +2631,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "2f516723",
+   "id": "36c5d6f4",
    "metadata": {},
    "outputs": [
     {
@@ -2633,7 +2655,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "54e74e0e",
+   "id": "6d6e018e",
    "metadata": {},
    "outputs": [
     {
@@ -2659,7 +2681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b07b0819",
+   "id": "65d2bec6",
    "metadata": {},
    "source": [
     "#### Linear SVC"
@@ -2668,7 +2690,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "992cb5e7",
+   "id": "b1869c65",
    "metadata": {},
    "outputs": [
     {
@@ -2698,7 +2720,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "14a3b264",
+   "id": "61beff40",
    "metadata": {},
    "outputs": [
     {
@@ -2724,7 +2746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c38841f",
+   "id": "7d927c6d",
    "metadata": {},
    "source": [
     "## SGD Classifier"
@@ -2733,7 +2755,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "8dcc809a",
+   "id": "17b96f89",
    "metadata": {},
    "outputs": [
     {
@@ -2757,7 +2779,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "aa1e68b1",
+   "id": "e0d3bdca",
    "metadata": {},
    "outputs": [
     {
@@ -2783,7 +2805,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa0dee45",
+   "id": "e1465182",
    "metadata": {},
    "source": [
     "## Logistic Regression"
@@ -2792,7 +2814,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "34a2e5c5",
+   "id": "7e9088a5",
    "metadata": {},
    "outputs": [
     {
@@ -2830,7 +2852,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "5e6ffc59",
+   "id": "010207e7",
    "metadata": {},
    "outputs": [
     {
@@ -2855,9 +2877,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "262ac973",
+   "metadata": {},
+   "source": [
+    "## accuracy\n",
+    "Decision Tree : 0.88<br/>\n",
+    "Random Forest : 0.94<br/>\n",
+    "SVC : 0.92<br/>\n",
+    "Linear SVC : 0.89<br/>\n",
+    "SGD Classifier : 0.86<br/>\n",
+    "Logistic Regression : 0.90<br/>\n",
+    "\n",
+    "Random Forest가 제일 높게 나왔고 그다음 svc이기에 두개의 모델이 유방암 여부체크에 적합해 보인다.<br/>\n",
+    "암과 같은 경우 recall 값이 중요한 부분인데 recall 값과 같은 경우도 Random Forest가 가장 높다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0db271b9",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac6c5224",
+   "metadata": {},
+   "source": [
+    "## 회고\n",
+    "\n",
+    "- Scikit-learn 데이터를 사용하여 여러 모델들에 적용을 해보았는데 데이터의 종류나 갯수 등에 의해 어느 특정 모델이 정확도가 높다기보다 각기 다르게 나오는 것을 보았다.<br/>\n",
+    "- 노드를 진행하면서 부족함도 많이 느꼈고 더 공부해야겠다는 생각이 강해졌다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4160880a",
+   "id": "64fd1f78",
    "metadata": {},
    "outputs": [],
    "source": []
